--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d data-source.ts",
     "typeorm:migration:generate": "npm run typeorm migration:generate src/migrations/Init",
     "typeorm:migration:run": "npm run typeorm migration:run",
-    "typeorm:migration:revert": "npm run typeorm migration:revert"
+    "typeorm:migration:revert": "npm run typeorm migration:revert",
+    "seed:role-access": "ts-node src/seeder/index.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
