--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typeorm:migration:generate": "npm run typeorm migration:generate src/migrations/Init",
     "typeorm:migration:run": "npm run typeorm migration:run",
     "typeorm:migration:revert": "npm run typeorm migration:revert",
-    "seed:role-access": "ts-node src/seeder/index.ts"
+    "seed": "ts-node src/seeder/index.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
